--- a/contents/html/footer.html
+++ b/contents/html/footer.html
@@ -31,6 +31,6 @@
     </section>
  
     <aside>
-        <p> © 2025 Copyright Pokémania Company </p>
+        <p> © 2025 Copyright Pokémania Company - <a href="https://github.com/klaynight-dev/Pokemania">view code</a> -</p>
     </aside>
 </footer>
