--- a/contents/html/footer.html
+++ b/contents/html/footer.html
@@ -34,3 +34,43 @@
         <p> © 2025 Copyright Pokémania Company - <a href="https://github.com/klaynight-dev/Pokemania">view code</a> -</p>
     </aside>
 </footer>
+
+<style>
+                footer section {
+                    display: grid;
+                    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                    gap: 20px;
+                    padding: 20px;
+                    text-align: left;
+                    color: var(--font-color);
+                }
+                footer section article {
+                    padding: 20px;
+                }
+                footer section h1 {
+                    font-size: 1.2em;
+                    margin-bottom: 10px;
+                }
+                footer section p {
+                    margin: 5px 0;
+                }
+                footer input {
+                    width: 93%;
+                    padding: 10px;
+                    margin-bottom: 10px;
+                    border: 1px solid #ccc;
+                    border-radius: 4px;
+                }
+                footer button {
+                    padding: 10px 20px;
+                    background-color: var(--third-color);
+                    border: none;
+                    border-radius: 4px;
+                    cursor: pointer;
+                    width: 100%;
+                }
+                footer button:hover {
+                    background-color: var(--secondary-color);
+                    color: var(--black-color);
+                }
+            </style>
