--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script> 
         $(function(){
           $("#footer").load("./contents/html/footer.html"); 
-        });
+          });
  
         $(function(){
           $("#nav").load("./contents/html/header.html"); 
@@ -60,7 +60,39 @@
         </main>
 
         <div id="footer"></div>
+        <script>
+  // Récupérer le nom d'utilisateur depuis les cookies
+  function getCookie(name) {
+    const value = `; ${document.cookie}`;
+    const parts = value.split(`; ${name}=`);
+    if (parts.length === 2) return parts.pop().split(';').shift();
+  }
 
+document.addEventListener('DOMContentLoaded', function() {
+  const usernameElement = document.querySelector('strong');
+  const storedUsername = getCookie('username');
+
+  if (storedUsername) {
+    usernameElement.textContent = storedUsername;
+  }
+  const menuButton = document.querySelector('nav div:first-of-type');
+
+  menuButton.addEventListener('click', function() {
+    lines.forEach(line => line.classList.toggle('active'));
+    menu.classList.toggle('active');
+    if (menu.classList.contains('active')) {
+      menu.style.zIndex = '-1';
+      menu.addEventListener('transitionend', function() {
+        menu.style.zIndex = '0';
+      }, { once: true });
+      logo.style.transform = 'scale(1.2) translateY(20px)';
+    } else {
+      menu.style.zIndex = '';
+      logo.style.transform = 'scale(1)';
+    }
+  });
+});
+        </script>
     </body>
 </html>
 
