--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
            <section>
                 <article>
                     <img src="./contents/img/pokeball.png" alt="Pokeball" width="100px" height="100px" style="transform: scaleX(-1);">
-                    <h1>Bienvenue <strong>Clem_562</strong></h1>
+                    <h1>Bienvenue <strong>à vous !</strong></h1>
                     <img src="./contents/img/pokeball.png" alt="Pokeball" width="100px" height="100px">
                 </article>
 
