--- a/contents/html/header.html
+++ b/contents/html/header.html
@@ -14,14 +14,14 @@
     </nav>
     <nav>
         <ul>
-            <li><a href="#">ACCUEIL</a></li>
-            <li><a href="#">MA COLLECTION</a></li>
-            <li><a href="#">LES TYPES</a></li>
-            <li><a href="#">NOUVEAUTÉS</a></li>
+            <li><a href="https://klaynight.fr/Pokemania">ACCUEIL</a></li>
+            <li><a href="">MA COLLECTION</a></li>
+            <li><a href="">LES TYPES</a></li>
+            <li><a href="">NOUVEAUTÉS</a></li>
         </ul>
     </nav>
 
-    <a href="./"><img src="https://klaynight.fr/Pokemania/contents/img/Design_sans_titre__1_-removebg-preview.png" alt="Logo"></a>
+    <a href="https://klaynight.fr/Pokemania"><img src="https://klaynight.fr/Pokemania/contents/img/Design_sans_titre__1_-removebg-preview.png" alt="Logo"></a>
     
 </header>
 <script>
